--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: rust
 script:
-- cargo build --verbose
+  - cargo build --verbose
+  - cargo test --verbose
 notifications:
   email:
     on_success: never
