--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ description = "Create multi-chapter documentation with Rustdoc."
 license = "Apache-2.0"
 repository = "https://github.com/steveklabnik/rustbook"
 documentation = "http://steveklabnik.github.io/rustbook/rustbook/"
+
+[[bin]]
+name="rustbook"
+test=false
